--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         text-indent: -9999em;
         border-top: 0.5vmin solid #fff;
         border-right: 0.5vmin solid #fff;
-        border-bottom: 0.5vmin solid #000;
-        border-left: 0.5vmin solid #000;
+        border-bottom: 0.5vmin solid #40f;
+        border-left: 0.5vmin solid #40f;
         animation: bootstrap_load 1s infinite linear;
       }
 
