--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         text-indent: -9999em;
         border-top: 0.5vmin solid #fff;
         border-right: 0.5vmin solid #fff;
-        border-bottom: 0.5vmin solid #40f;
-        border-left: 0.5vmin solid #40f;
+        border-bottom: 0.5vmin solid #F8BE15;
+        border-left: 0.5vmin solid #F8BE15;
         animation: bootstrap_load 1s infinite linear;
       }
 
@@ -40,7 +40,7 @@
       }
     </style>
   </head>
-  <body>
+  <body style="background: #1a1a1a">
     <div class="bootstrap-load"></div>
     <script src="/bundles/bundle.js"></script>
   </body>
