--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Enoki</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <meta name="description" content="An experimental tool for self-publishing on the peer-to-peer web">
+    <meta name="description" content="An experimental tool for self-expression on the decentralized web">
     <meta property="og:title" content="Enoki">
     <meta name="twitter:title" content="Enoki">
     <meta property="og:type" content="website">
@@ -12,8 +12,8 @@
     <meta property="og:url" content="https://enoki.site">
     <meta name="twitter:description" content="An experimental tool for self-publishing on the peer-to-peer web">
     <meta property="og:description" content="An experimental tool for self-publishing on the peer-to-peer web">
-    <meta name="twitter:image" content="https://panel.enoki.site/assets/meta.jpg">
-    <meta property="og:image" content="https://panel.enoki.site/assets/meta.jpg">
+    <meta name="twitter:image" content="https://enoki.site/assets/meta.png">
+    <meta property="og:image" content="https://enoki.site/assets/meta.png">
     <link rel="stylesheet" href="/bundles/bundle.css"/> 
     <style>
       .bootstrap-load {
