--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <meta property="og:description" content="An experimental tool for self-publishing on the peer-to-peer web">
     <meta name="twitter:image" content="https://enoki.site/assets/meta.png">
     <meta property="og:image" content="https://enoki.site/assets/meta.png">
+    <link rel="apple-touch-icon-precomposed" href="/assets/favicon-152.png">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" sizes="16x16 24x24 32x32 64x64"/>
     <link rel="stylesheet" href="/bundles/bundle.css"/> 
     <style>
       .bootstrap-load {
