--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
   </head>
   <body style="background: #1a1a1a">
     <div class="bootstrap-load"></div>
-    <script src="/bundles/bundle.js"></script>
+    <script src="/bundles/bundle.js?2"></script>
   </body>
 </html>
